--- a/app/src/main/res/layout/activity_confirmacion.xml
+++ b/app/src/main/res/layout/activity_confirmacion.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Confirmacion">
 
+
+    <TextView
+        android:layout_margin="16dp"
+        android:id="@+id/tv_asignatura"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
