--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,10 +27,12 @@
             android:layout_marginTop="40dp"
             app:srcCompat="@drawable/logo" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/edt_carne"
             android:layout_margin="8dp"
             android:padding="8dp"
+            android:digits="0123456789"
+            android:maxLength="10"
             android:background="@drawable/roundcorners"
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
