--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,5 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/menu_asistencias" android:title="@string/menu_asistencias" />
+    <item android:id="@+id/menu_logout" android:title="@string/menu_logout" />
 
 </menu>
