--- a/app/src/main/res/layout/activity_confirmacion.xml
+++ b/app/src/main/res/layout/activity_confirmacion.xml
@@ -43,6 +43,12 @@
 
 
             <LinearLayout
+                android:id="@+id/ly_c_info"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
                 android:orientation="horizontal"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
@@ -209,6 +215,7 @@
             </LinearLayout>
 
 
+        </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
