--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#e35183</color>
 
     <color name="grey">#9c9c9c</color>
+    <color name="warning">#9e9d24</color>
+    <color name="danger">#870000</color>
     <color name="success">#15601a</color>
     <color name="cvalue">#2d1560</color>
 </resources>
