--- a/app/src/main/res/layout/asistencias_item.xml
+++ b/app/src/main/res/layout/asistencias_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -135,12 +136,6 @@
 
 
     </LinearLayout>
-
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/grey" />
 
 
 </LinearLayout>
